--- a/.github/workflows/run-benchmarks.yml
+++ b/.github/workflows/run-benchmarks.yml
@@ -1,10 +1,10 @@
-name: Performance Test
+name: Run Benchmarks
 
 on: [repository_dispatch, workflow_dispatch]
 
 jobs:
 
-  inst:
+  run-benchmarks:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
@@ -32,6 +32,20 @@ jobs:
             total: 5000
 
     steps:
+        
+      - name: Checkout foundation-base
+        uses: actions/checkout@v3
+        with:
+          repository: zcaudate-xyz/foundation-base
+          path: foundation-base
+          token: ${{ secrets.GH_TOKEN }}
+          
+      - name: Checkout foundation-embed
+        uses: actions/checkout@v3
+        with:
+          repository: zcaudate-xyz/foundation-embed
+          path: foundation-embed
+          token: ${{ secrets.GH_TOKEN }}
           
       - name: Checkout statstrade-core
         uses: actions/checkout@v3
@@ -39,18 +53,8 @@ jobs:
           repository: statstrade-dev/statstrade-core
           path: statstrade-core
           token: ${{ secrets.GH_TOKEN }}
-          
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.GH_USER }}
-          password: ${{ secrets.GH_TOKEN }}
+          submodules: recursive
 
-      - name: Setup postgres
-        run: docker run -d --rm --network host --name postgres -e "POSTGRES_DB=test-scratch2" -e "POSTGRES_PASSWORD=postgres" -e "POSTGRES_PORT=5432" -e "POSTGRES_USER=postgres" ghcr.io/zcaudate/infra-db:main
-        
       - name: Run Performance
         run: >
           docker run --rm --network host 
@@ -58,5 +62,6 @@ jobs:
           -w $(pwd)
           -e BENCH_BATCH=1000
           -e BENCH_TOTAL=${{ matrix.total }}
-          ghcr.io/zcaudate/foundation-ci:main 
-          bash -c 'cd statstrade-core && lein ${{ matrix.command }}'
+          ghcr.io/zcaudate-xyz/infra-foundation-dev:ci 
+          bash -c 'cd statstrade-core && make deps-checkouts && lein ${{ matrix.command }}'
+
