--- a/.github/workflows/run-benchmarks.yml
+++ b/.github/workflows/run-benchmarks.yml
@@ -54,6 +54,14 @@ jobs:
           path: statstrade-core
           token: ${{ secrets.GH_TOKEN }}
           submodules: recursive
+          
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USER }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Run Performance
         run: >
